--- a/src/styles.css
+++ b/src/styles.css
@@ -48,3 +48,38 @@ body {
   text-align: center;
   margin-top: 2em;
 }
+
+/* BOOK STYLES */
+.book-lists {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.book-item {
+  display: flex;
+  align-items: flex-start;
+  gap: 1em;
+  padding: 1em;
+}
+
+.book-text {
+  text-align: left;
+  width: 50%;
+}
+
+.book-text h3 {
+  margin: 0 0 0.5em;
+  font-size: 1rem;
+  line-height: 1.2;
+}
+
+.authors {
+  margin: 0;
+  font-size: 0.9rem;
+  line-height: 1.2;
+  word-wrap: break-word;
+  border-bottom: 1px solid #000;
+  margin-bottom: 0.5em;
+}
