--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,8 @@ body {
 
 /* BODY STYLES */
 .body,
-.pinned-books {
+.pinned-books,
+.main {
   color: #000;
   text-align: center;
   margin-top: 2em;
@@ -83,4 +84,43 @@ body {
   word-wrap: break-word;
   border-bottom: 1px solid #000;
   margin-bottom: 0.5em;
+}
+
+/* BUTTON STYLES */
+.pinned-books-btn {
+  text-align: center;
+  height: 3em;
+  width: 10%;
+  margin-top: 1em;
+  font-size: 14px;
+  border: none;
+  border-radius: 5px;
+  background-color: #005d85;
+  cursor: pointer;
+  text-decoration: none;
+  color: #ffffff;
+  padding: 10px 20px;
+  transition: background-color 0.8s ease;
+}
+
+.pinned-books-btn a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.pinned-books-btn:hover,
+.pin:hover,
+.unpin:hover {
+  background-color: #109dda;
+}
+
+.pin,
+.unpin {
+  border: none;
+  border-radius: 5px;
+  background-color: #005d85;
+  cursor: pointer;
+  color: #ffffff;
+  padding: 10px 20px;
+  margin-top: 0.5em;
 }
